--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,6 +15,13 @@
         <img src="{% static 'images/logo.png' %}" alt="" height="100" width="120">
     </a>
 
+
+    {% if user.is_authenticated %}
+        <a href="{% url  'profile' user.username %}" class="navbar-text navbar-right">{{ user.username }}</a>
+        <a href="{% url 'logout' %}" class="navbar-text navbar-right">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}" class="navbar-text navbar-right">Login</a>
+    {% endif %}
 </nav>
 
 <main class="container" role="main">
