--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -7,11 +7,12 @@
 
             <div class="panel panel-default">
                 <a href="/{{ treasure.id }}/">
-            <div class="panel-heading">
-                <h3 class="panel-title">{{ treasure.name }}</h3>
-                <img src="{{ treasure.img_url }}" height="100px" width="100px">
-                <a class="" href="/user/{{ treasure.user.username }}"> BY {{ treasure.user.username }}</a></a>
-            </div>
+                    <div class="panel-heading">
+                        <h3 class="panel-title">{{ treasure.name }}</h3>
+                        <img src="{{ treasure.img_url }}" height="100px" width="100px">
+                        <a class="" href="/user/{{ treasure.user.username }}"> BY {{ treasure.user.username }}
+                        </a>
+                    </div>
                 </a>
 
             </div>
