--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -30,6 +30,7 @@
 
 
 </main>
-
+<script type="text/javascript" src="{% static 'js/jquery-3.1.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
 </body>
 </html>
