--- a/main_app/static/style.css
+++ b/main_app/static/style.css
@@ -12,3 +12,20 @@
 .bg{
     background: white;
 }
+
+
+
+
+
+.email{
+
+    color: #2e6da4;
+}
+.detail{
+
+
+    background-color:#c4e3f3;
+    padding: 5px;
+    text-align: center;
+
+}
